Sketch out geometry

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Geometry Search</title>
+<title>Geometric Construction Search</title>
 <style>
 .tbd{color:gray}
 .fail{color:crimson}
@@ -47,7 +47,10 @@ function module(name, fn) {
   }
 }
 </script>
-<dl>
 <script src=constructible_number.js></script>
+<script src=geometry.js></script>
+
+<h1>Geometric Construction Search</h1>
+<dl>
 <script src=test.js></script>
 </dl>
