--- a/test.html
+++ b/test.html
@@ -1,3 +1,17 @@
+<!doctype html>
+<meta charset=utf-8>
+<title>Geometric Construction Search</title>
+<style>
+.tbd{color:gray}
+.fail{color:crimson}
+</style>
+<script src=src/constructible_number.js></script>
+<script src=src/geometry.js></script>
+<script src=src/test.js></script>
+
+<h1>Geometric Construction Search</h1>
+<dl>
+<script>
 "use strict";
 
 module("ConstructibleNumber", () => {
@@ -63,3 +77,5 @@ module("Geometry", () => {
     assert_equal(ii, "1,0,1");
   });
 });
+</script>
+</dl>
