Fix broken tests

--- a/test.html
+++ b/test.html
@@ -192,11 +192,11 @@ module("Geometry", () => {
       Circle.UNIT,
     );
     assert_equal(
-      Point.ORIGIN.circleTo(new Point(SquareRoot.ONE_OVER_ROOT_TWO, SquareRoot.ONE_OVER_ROOT_TWO)),
+      Point.ORIGIN.circleTo(new Point(Fraction.ONE_OVER_ROOT_TWO, Fraction.ONE_OVER_ROOT_TWO)),
       Circle.UNIT,
     );
     assert_equal(
-      Point.ORIGIN.circleTo(new Point(Fraction.ONE_HALF, SquareRoot.ROOT_THREE_OVER_TWO)),
+      Point.ORIGIN.circleTo(new Point(Fraction.ONE_HALF, Fraction.ROOT_THREE_OVER_TWO)),
       Circle.UNIT,
     );
     assert_equal(
